# conduit

./: .editorconfig  .gitignore  .lintstagedrc.json  .prettierrc.json  .vercelignore  Cargo.toml  README.md  eslint.config.base.mjs  eslint.config.mjs  eslint.config.mts  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vercel.json  vitest.base.config.ts
.cursor/: rules
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit
apps/web/: README.md  eslint.config.js  instrumentation-client.ts  instrumentation.ts  next.config.ts  package.json  tsconfig.json  tsconfig.test.json  vitest.config.mts  vitest.config.ts  vitest.setup.ts
apps/web/public/: manifest.json
apps/web/public/workers/: conduit.wasm  conduit_wasm.js  conduit_wasm_bg.wasm
apps/web/src/__tests__/: simple.test.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
apps/web/src/app/api/anthropic/: route.ts
apps/web/src/app/api/event/: route.ts
apps/web/src/components/: AstSearchPanel.tsx  FileUploader.tsx  Modal.tsx  ModelGrid.tsx  ModelSwitcher.tsx  PersistButtons.tsx  PersistingOverlay.tsx  SetupModal.tsx  SyncModal.tsx  model-utils.ts  providers.tsx
apps/web/src/components/__tests__/: model-utils.test.ts
apps/web/src/components/ui/: button.tsx  dialog.tsx  markdown.tsx  textarea.tsx  tooltip.tsx
apps/web/src/hooks/: useFileChanges.ts
apps/web/src/lib/: ai-client.ts  anthropic-client.ts  auth0-provider.tsx  constants.ts  format.ts  google-analytics.tsx  gtag.ts  mixpanel.tsx  posthog-server.ts  posthog.ts  storage.ts
apps/web/src/lib/__tests__/: anthropic-client.test.ts.skip  storage.test.ts  storage.test.ts.skip
apps/web/src/types/: file-system-access.d.ts
artifacts/wasm/: conduit.wasm  manifest.json
configs/: eslint.base.cjs  eslint.base.js
crates/conduit-bench/: Cargo.toml
crates/conduit-bench/src/: lib.rs
crates/conduit-core/: Cargo.toml
crates/conduit-core/src/: error.rs  index.rs  lib.rs  manager.rs  path.rs
crates/conduit-core/src/ast/: cache.rs  language.rs  mod.rs  pattern.rs  search.rs
crates/conduit-core/src/fs/: index.rs  manager.rs  mod.rs  path.rs
crates/conduit-core/src/tools/: diff.rs  line_index.rs  line_ops.rs  matcher.rs  mod.rs  model.rs  preview.rs  read.rs  replace.rs  search.rs
crates/conduit-fuzz/: Cargo.toml
crates/conduit-fuzz/src/: lib.rs
crates/conduit-index/: Cargo.toml
crates/conduit-index/src/: lib.rs
crates/conduit-matcher/: Cargo.toml
crates/conduit-tools/: Cargo.toml
crates/conduit-tools/src/: abort.rs  error.rs  lib.rs  span.rs
crates/conduit-vector/: Cargo.toml
crates/conduit-vector/src/: lib.rs
crates/conduit-wasm/: Cargo.toml
crates/conduit-wasm/src/: ast.rs  globals.rs  lib.rs  orchestrator.rs  utils.rs
crates/conduit-wasm/src/bindings/: debug_ops.rs  file_ops.rs  line_ops.rs  mod.rs  read_ops.rs  search_ops.rs  staging_ops.rs  validation_ops.rs
crates/test-overlaps/: Cargo.toml
crates/test-overlaps/src/: main.rs  test_regions.rs
scripts/: remove-inline-comments.cjs
tools/: build-wasm.sh
