[package]
name = "conduit-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
conduit-core = { path = "../conduit-core" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
once_cell = "1.19"
console_error_panic_hook = { version = "0.1", optional = true }

# Tree-sitter dependencies for WASM
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.24"
tree-sitter-python = "0.24"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

[features]
default = ["console_error_panic_hook"]
