[package]
name = "conduit-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for Conduit file indexing and search"
repository = "https://github.com/abaveja313/conduit"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
conduit-core = { path = "../conduit-core" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
once_cell = "1.19"
console_error_panic_hook = { version = "0.1", optional = true }
globset = "0.4.18"

[features]
default = ["console_error_panic_hook"]
